<resources>
    <string name="app_name">NextFit</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Create an Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account">"Don't have an account? Create one"</string>
    <string name="loginText">"Welcome to the NextFit Family"</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="tag">Today is the day to start your healthy journey</string>
    <string name="register">Register</string>
    <string name="repassword">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="already">Already have an account?</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_landing">Landing</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_steps_u_i">StepsUI</string>
    <string name="title_activity_steps_graph">StepsGraph</string>
    <string name="title_activity_main_nav_drawer">MainNavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>
